modify follower and following features